# spectrum

./: TODO.md  qgis.qgz
app/service/: .dockerignore  Cargo.toml  Dockerfile  fly.toml  tile.geojson  tile2.geojson
app/service/api/: Cargo.toml
app/service/api/src/: buffer.rs  flatgeobuf.rs  lib.rs  main.rs  regions.rs  routing.rs  state.rs  tracing.rs  union.rs
app/service/builder/: Cargo.toml
app/service/builder/src/: builder.rs  filter.rs  lib.rs
app/service/core_geo/: Cargo.toml
app/service/core_geo/src/: buffer.rs  lib.rs  union.rs
app/webapp/: package-lock.json  package.json
app/webapp/src/: app.html
app/webapp/src/routes/: +page.svelte
app/webapp/src/routes/tmp/: +page.svelte
spikes/flatgeobuf/: TODO.md
spikes/flatgeobuf/backend/: Cargo.toml  Shuttle.toml
spikes/flatgeobuf/backend/builder/: .gitignore  Cargo.toml
spikes/flatgeobuf/backend/builder/geo_assets/: all.fgb
spikes/flatgeobuf/backend/builder/src/: builder.rs
spikes/flatgeobuf/backend/service/: Cargo.toml
spikes/flatgeobuf/backend/service/src/: find.rs  geo_assets.rs  lib.rs
spikes/flatgeobuf/backend/shared/: Cargo.toml
spikes/flatgeobuf/backend/shared/src/: find.rs
spikes/flatgeobuf/backend/shuttle/: Cargo.toml
spikes/flatgeobuf/backend/shuttle/src/: main.rs
spikes/flatgeobuf/frontend/webapp/: main.js
spikes/fly/: Cargo.toml  Dockerfile  fly.toml
spikes/opentracing/: .gitignore  Cargo.toml
spikes/opentracing/src/: main.rs
spikes/pmtiles/: .gitignore  Cargo.toml
spikes/pmtiles/src/: main.rs
spikes/regions/: TODO.md  main.js
spikes/regions-wasm/: TODO.md
spikes/regions-wasm/counter/: Cargo.toml
spikes/regions-wasm/counter/src/: lib.rs
spikes/regions-wasm/webapp/: counter.js  index.html  main.js  package-lock.json
spikes/regions-wasm/webapp/src/: app.js
spikes/regions-wasm/webapp/wasm/: counter.d.ts  counter.js  counter_bg.wasm  counter_bg.wasm.d.ts
spikes/regions/service/: Cargo.toml
spikes/regions/service/src/: find.rs  main.rs
spikes/regions/webapp/: index.html  main.js  package-lock.json  package.json
spikes/shuttle/: Cargo.toml  TODO.md
spikes/shuttle/geo_assets/: maine.geojson
spikes/shuttle/src/: find.rs  geo_assets.rs  lib.rs  main.rs
