[workspace]
members = ["api", "builder"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.5"
tower = "0.4"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.13", features = ["derive"] }
dotenvy = "0.15.7"

geojson = { version = "0.24", features = ["geo-types"] }
geo-types = "0.7.13"
geozero = "0.13.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
