[workspace]
members = ["api", "builder", "core_geo"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7.5"
tower = "0.4"
tower-http = { version = "0.5.2", features = ["cors", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.13", features = ["derive"] }
dotenvy = "0.15.7"

rstar = "0.12.0"
geojson = { version = "0.24", features = ["geo-types"] }
geo = "0.28.0"
flatgeobuf = "4.2.1"
geozero = "0.13.0"
cavalier_contours = "0.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

ferrostar = "0.6.1"
url = "2.5.2"
reqwest = "0.12.5"

test-log = "0.2.16"
pretty_assertions = "1.4.0"
