[package]
name = "opentracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22.0"
opentelemetry-otlp = "0.14"
opentelemetry-semantic-conventions = "0.13"
