[package]
name = "shuttle-spike"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
tokio = "1.28.2"
tracing = "0.1.40"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
geojson = "0.24"
serde_json = "1.0"
rust-embed = "8.1.0"
