[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.22", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.15", features = [
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
] }
opentelemetry-http = { version = "0.11" }
opentelemetry-semantic-conventions = { version = "0.14" }
tracing-opentelemetry = "0.23"
tracing = { workspace = true }

geo = { workspace = true }
rstar = { workspace = true }
flatgeobuf = { workspace = true }

geojson = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

test-log = { workspace = true }

dotenvy = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
pretty_assertions = "1.4.0"
