[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatgeobuf = { workspace = true }
geozero = "0.11"
geo = "0.27.0"
geojson = { version = "0.24", features = ["geo-types"] }
geo-types = { version = "0.7", features = ["serde"] }
osmpbf = "0.3"
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
