[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
geojson = { version = "0.24", features = ["geo-types"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rust-embed = { version = "8.1", features = ["interpolate-folder-path"] }
flatgeobuf = { workspace = true }
geozero = "0.11"
