[package]
name = "shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.35.0"
shuttle-runtime = "0.35.0"
shuttle-secrets = "0.35.2"
geojson = { version = "0.24", features = ["geo-types"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.28.2"
tracing = "0.1.40"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
shared = { path = "../shared" }
