[package]
name = "shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.35.0"
shuttle-runtime = { version = "0.35.0", default-features = false }
shuttle-secrets = "0.35.2"
geojson = { version = "0.24", features = ["geo-types"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.28.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
shared = { path = "../shared" }
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
opentelemetry-jaeger = "0.20"
opentelemetry-stdout = { version = "0.2", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.14", features = [
    "metrics",
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
] }
opentelemetry-http = "0.10"
opentelemetry-semantic-conventions = "0.13"
tracing-opentelemetry = "0.22"
