[package]
name = "shuttle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
shuttle-axum = "0.35.0"
shuttle-runtime = { version = "0.35.0", default-features = false }
shuttle-secrets = "0.35.2"
geojson = { version = "0.24", features = ["geo-types"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.28.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
shared = { path = "../shared" }
opentelemetry = "0.21"
opentelemetry_sdk = "0.21.1"
tracing-opentelemetry = "0.22.0"
opentelemetry-otlp = "0.14"
opentelemetry-semantic-conventions = "0.13"
